--- a/src/test/resources/socks.properties
+++ b/src/test/resources/socks.properties
@@ -1,11 +1,11 @@
-#SOCKS server initialisation file.
+#com.github.jsocks.SOCKS server initialisation file.
 
 
-#Port on which the socks server should run
+#Port on which the com.github.jsocks.socks server should run
 #If not set deafults to 1080
 port = 1080
 
-#Timeout settings for the SOCKS server,in milliseconds.
+#Timeout settings for the com.github.jsocks.SOCKS server,in milliseconds.
 #If not defined, all default to 3 minutes(18000ms).
 #
 # iddleTimeout  If no data received from/to user during this interval
@@ -71,7 +71,7 @@ range = localhost;130.220.
 # Semicolon(;) separated list of users, for whom permissions should be
 # granted, given they connect from one of the hosts speciefied by range.
 # This field is optional, if not defined, ANY user will be allowed to use
-# SOCKS server, given he\she is connecting from one of the hosts in the
+# com.github.jsocks.SOCKS server, given he\she is connecting from one of the hosts in the
 # range.
 # NOTE:  Whitespaces are not ignored (except for the first name, it's how java
 #                                    parses Property files).
