--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,25 @@
 apply plugin: 'java'
 
+group='com.github.jsocks'
+version = '1.0.1'
+
+jar {
+    manifest.attributes provider: 'gradle'
+}
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
     testCompile 'junit:junit:4.11'
+}
+
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+artifacts {
+    archives sourcesJar
 }
