Netty, Kryo and ObjectDecoder test together.

--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,8 @@ repositories {
 
 dependencies {
     testCompile 'junit:junit:4.11',
-            'org.jboss.netty:netty:3.2.7.Final'
+            'org.jboss.netty:netty:3.2.7.Final',
+            'com.esotericsoftware.kryo:kryo:2.21'
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
